# AI_201-Batch_67-Q2-Certified_Agentic_Robotic_AI_Engineer

./: .gitignore
assignments/: 01_decorators_demo.md  02_agent_using_openai_agent_sdk.md  03_agent_using_openai_agent_sdk.md  03_content_writer_agent_using_openai_agent_sdk.md  04_chatbot_with_chat_history.md  05_chatbot_using_chainlit_and_litellm.md  06_chatbot_with_tools.md  07_Hackathon_Challenge_01.md  AI_agent.md
class01-20250413/: Readme.md
class02-20250420/: Readme.md
class02-20250420/01_daca/: Readme.md
class02-20250420/01_openAI_agents_sdk/: readme.md
class02-20250420/02_openAI_agents_sdk/: readme.md
class02-20250420/02_swarm/: readme.md
class02-20250420/03_uv/decorators/: pyproject.toml
class02-20250420/03_uv/getting-started/: pyproject.toml
class02-20250420/03_uv/getting-started/src/getting_started/: __init__.py  index.py  main.py
class02-20250420/03_uv/understanding-wrapper/: pyproject.toml
class02-20250420/03_uv/uv-project/: pyproject.toml
class02-20250420/04_agent_hello_world/agent_hello/: pyproject.toml
class02-20250420/04_agent_hello_world/agent_hello/src/agent_hello/: agent_config.py  async_run.py  global_config.py  runner_config.py  with_tool.py
class03-20250427/: Readme.md
class03-20250427/01_uv_basic_project/test-project/: README.md  pyproject.toml
class03-20250427/01_uv_basic_project/test-project/src/test_project/: __init__.py
class03-20250427/02_agent_hello_world/agent_hello/: pyproject.toml
class03-20250427/02_agent_hello_world/agent_hello/src/agent_hello/: global_config.py
class03-20250427/03_agent_hello_world/agent_hello/: pyproject.toml
class03-20250427/04_openrouter/: Readme.md
class03-20250427/04_openrouter/openrouter/: pyproject.toml
class03-20250427/04_openrouter/openrouter/src/openrouter/: agent.py  openrouter_directly.py
class03-20250427/05_litellm/: readme.md
class03-20250427/05_litellm/litellm-agent/: pyproject.toml
class03-20250427/05_litellm/litellm-agent/src/litellm_agent/: main.py
class03-20250427/05_litellm/litellm-basic/: pyproject.toml
class03-20250427/06_chainlit/chainlit-hello-world/: chatbot.py
class03-20250427/06_chainlit/chainlit-litellm/: chat_history.json  chatbot.py  pyproject.toml  secerts.py
class04-20250504/: Readme.md
class04-20250504/01_aysnc_programming/: Readme.md
class04-20250504/01_aysnc_programming/async-programming/: README.md
class04-20250504/01_swarm/: readme.md
class04-20250504/02_agent_hello_world/agent_hello/: pyproject.toml
class04-20250504/02_agent_hello_world/agent_hello/src/agent_hello/: async_run.py  global_config.py  secrets.py
class04-20250504/02_aysnc_programming/async-programming/: pyproject.toml
class04-20250504/04_openrouter/openrouter/: README.md
class04-20250504/05_litellm/litellm-agent/: pyproject.toml
class04-20250504/05_litellm/litellm-agent/src/litellm_agent/: secerts.py
class04-20250504/05_litellm/litellm-basic/: README.md  pyproject.toml
class04-20250504/05_litellm/litellm-basic/src/litellm_basic/: main.py  secerts.py
class04-20250504/06_chainlit/: Readme.md
class04-20250504/06_chainlit/chainlit-hello-world/: README.md  chatbot.py
class04-20250504/06_chainlit/chainlit-litellm/: .env.example  README.md  chat_history.json  chatbot.py  pyproject.toml
class05-20250518/: Readme.md
class05-20250518/01_chainlit/chainlit-hello-world/: pyproject.toml
class05-20250518/03_openrouter/openrouter/: .env.example
class05-20250518/04_litellm/litellm-basic/: pyproject.toml
class05-20250518/04_litellm/litellm-basic/src/litellm_basic/: __init__.py  main.py
class05-20250518/05_chainlit/chainlit-litellm/: pyproject.toml
class05-20250518/06_chatbot/chatbot/: chat_history.json  chatbot.py
class05-20250518/07_streaming/streaming_chainlit/: README.md
class06-20250525/: Readme.md
class06-20250525/01_openrouter/: Readme.md
class06-20250525/01_openrouter/openrouter/: pyproject.toml
class06-20250525/02_agent_hello_world/agent_hello/: README.md
class06-20250525/02_litellm/litellm-agent/: README.md
class06-20250525/02_litellm/litellm-basic/: .env.example
class06-20250525/03_chainlit/chainlit-litellm/: chat_history.json  chatbot.py  my_secrets.py
class06-20250525/04_litellm/litellm-basic/: README.md
class06-20250525/04_streaming/: Readme.md
class06-20250525/04_streaming/streaming_agent/: .env.example  README.md
class06-20250525/04_streaming/streaming_chainlit/: hello.py
class06-20250525/05_chainlit/chainlit-litellm/: .env.example
class06-20250525/06_streaming/streaming_agent/: pyproject.toml
class06-20250525/06_streaming/streaming_chainlit/: chatbot.py  pyproject.toml
class06-20250525/07_tools/agent_with_tools/: README.md
class07-20250601/: Readme.md
class07-20250601/01_agent_hello_world/agent_hello/: pyproject.toml
class07-20250601/02_tools/agent_with_tools/: pyproject.toml
class07-20250601/02_tools/weather_agnet/: pyproject.toml
class07-20250601/02_tools/weather_agnet/src/weather_agnet/: __init__.py
class07-20250601/03_tools/: Readme.md
class07-20250601/04_agents_as_tool/: Readme.md
class07-20250601/05_context/: Readme.md
class08-20250615/: Readme.md
class08-20250615/03_handoffs/: Readme.md
class08-20250615/03_handoffs/agent_with_handoffs/: README.md  pyproject.toml
class08-20250615/03_handoffs/agent_with_handoffs/src/agent_with_handoffs/: handoff_agent.py  handoff_agent_custom.py
class09-20250622/: Readme.md
class09-20250622/01_guardrails/: Readme.md
class09-20250622/01_guardrails/guardrails_combined/: pyproject.toml
class09-20250622/01_guardrails/guardrails_combined/src/guardrails_combined/: main.py
class09-20250622/01_guardrails/input_guardrails/: README.md  pyproject.toml
class09-20250622/01_guardrails/input_guardrails/src/input_guardrails/: main.py
class09-20250622/01_guardrails/output_guardrails/: .env.example  README.md  pyproject.toml
class09-20250622/01_guardrails/output_guardrails/src/output_guardrails/: __init__.py  main.py
class09-20250622/05_runner_life_cycle/runner_lifecycle/: pyproject.toml
class10-20250629/: Readme.md
(+68 files in other folders)
