[project]
name = "test-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
test-project = "test_project:main"
test-script = "test_project.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
