[project]
name = "litellm-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Hassan Ali Khan", email = "73381969+hassan-ak@users.noreply.github.com" }
]
requires-python = ">=3.11"
dependencies = [
    "openai-agents[litellm]>=0.0.13",
    "python-dotenv>=1.1.0",
]

[project.scripts]
gemini-agent = "litellm_agent.main:run_gemini"
groq-agent = "litellm_agent.main:run_groq"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
