[project]
name = "litellm-basic"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "litellm>=1.69.3",
    "python-dotenv>=1.1.0",
    "rich>=14.0.0",
]

[project.scripts]
gemini = "litellm_basic.main:run_gemini"
groq = "litellm_basic.main:run_groq"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
