[project]
name = "agent-with-tools"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Hassan Ali Khan", email = "73381969+hassan-ak@users.noreply.github.com" }
]
requires-python = ">=3.11"
dependencies = [
    "openai-agents>=0.0.16",
    "python-dotenv>=1.1.0",
    "rich>=14.0.0",
]

[project.scripts]
run-agent = "agent_with_tools.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
