[project]
name = "weather-agnet"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Hassan Ali Khan", email = "73381969+hassan-ak@users.noreply.github.com" }
]
requires-python = ">=3.11"
dependencies = [
    "openai-agents>=0.0.16",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
    "rich>=14.0.0",
]

[project.scripts]
run-agent = "weather_agnet.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
