[project]
name = "agent-with-handoffs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai-agents>=0.0.17",
    "python-dotenv>=1.1.0",
    "rich>=14.0.0",
]

[project.scripts]
agent-with-handoffs = "agent_with_handoffs.handoff_agent:main"
agent-with-handoffs-custom = "agent_with_handoffs.handoff_agent_custom:main"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
