[project]
name = "guardrails-combined"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai-agents>=0.0.19",
    "python-dotenv>=1.1.0",
    "rich>=14.0.0",
]

[project.scripts]
guardrails-combined-tripped = "guardrails_combined.main:tripped"
guardrails-combined-not-tripped = "guardrails_combined.main:not_tripped"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
