[project]
name = "input-guardrails"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai-agents>=0.0.19",
    "python-dotenv>=1.1.0",
    "rich>=14.0.0",
]

[project.scripts]
input-guardrails-tripped = "input_guardrails.main:tripped"
input-guardrails-not-tripped = "input_guardrails.main:not_tripped"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
