[project]
name = "output-guardrails"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai-agents>=0.0.19",
    "python-dotenv>=1.1.0",
    "rich>=14.0.0",
]

[project.scripts]
output-guardrails-tripped = "output_guardrails.main:tripped"
output-guardrails-not-tripped = "output_guardrails.main:not_tripped"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
